tests/sketchy_null_check/sketchy_null_check.exp
Error --------------------------------------------------------------------------------------------------- cycle_C.js:4:7

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   cycle_C.js:4:7
   4|   if (x); /* sketchy because of uses */
            ^

References:
   cycle_B.js:3:21
   3| const b = {a: a, b: 0};
                          ^ [1]
   cycle_C.js:7:25
   7| const resNull: void = f(null);
                              ^^^^ [2]


Error -------------------------------------------------------------------------------------------- fully_across_B.js:4:6

Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or
undefined [2]? [sketchy-null-string]

   fully_across_B.js:4:6
   4|   if(x){ /* sketchy because of uses */ }
           ^

References:
   fully_across_A.js:1:13
   1| var maybe: ?string = "foo"
                  ^^^^^^ [1]
   fully_across_A.js:1:12
   1| var maybe: ?string = "foo"
                 ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ partial_across_B.js:4:6

Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or
undefined [2]? [sketchy-null-string]

   partial_across_B.js:4:6
   4|   if(x){ /* sketchy because of uses */ }
           ^

References:
   partial_across_B.js:8:3
   8| f("");
        ^^ [1]
   partial_across_A.js:1:18
   1| module.exports = null;
                       ^^^^ [2]


Error ------------------------------------------------------------------------------------------ simple_sketchies.js:5:7

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:5:7
   5|   if (x) {/* sketchy */}
            ^

References:
   simple_sketchies.js:4:16
   4| function f(x: ?number) {
                     ^^^^^^ [1]
   simple_sketchies.js:4:15
   4| function f(x: ?number) {
                    ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:10:7

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:10:7
   10|   if (x) { /* sketchy */ }
             ^

References:
   simple_sketchies.js:9:15
    9| function h(x: number|null) {
                     ^^^^^^ [1]
   simple_sketchies.js:9:22
    9| function h(x: number|null) {
                            ^^^^ [2]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:31:7

Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or
undefined [2]? [sketchy-null-string]

   simple_sketchies.js:31:7
   31|   if (x) { /* sketchy because of calls */ }
             ^

References:
   simple_sketchies.js:34:3
   34| r(""); // definitely falsey, sketchy
         ^^ [1]
   simple_sketchies.js:33:3
   33| r(null);
         ^^^^ [2]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:37:7

Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or
undefined [2]? [sketchy-null-string]

   simple_sketchies.js:37:7
   37|   if (x) { /* sketchy because of calls */ }
             ^

References:
   simple_sketchies.js:40:26
   40| declare var unknown_str: string;
                                ^^^^^^ [1]
   simple_sketchies.js:39:3
   39| s(null);
         ^^^^ [2]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:47:7

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [1]?
[sketchy-null-number]

   simple_sketchies.js:47:7
   47|   if (o.p) {/* sketchy */}
             ^^^

References:
   simple_sketchies.js:46:21
   46| function l(o: { p?: number, ... }) {
                           ^^^^^^ [1]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:52:7

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:52:7
   52|   if (o.p) {/* sketchy */}
             ^^^

References:
   simple_sketchies.js:51:21
   51| function m(o: { p: ?number, ... }) {
                           ^^^^^^ [1]
   simple_sketchies.js:51:20
   51| function m(o: { p: ?number, ... }) {
                          ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:57:7

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:57:7
   57|   if (o.p) { /* sketchy */ }
             ^^^

References:
   simple_sketchies.js:56:20
   56| function n(o: { p: number|null|void, ... }) {
                          ^^^^^^ [1]
   simple_sketchies.js:56:32
   56| function n(o: { p: number|null|void, ... }) {
                                      ^^^^ [2]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:68:7

Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or
undefined [2]? [sketchy-null-string]

   simple_sketchies.js:68:7
   68|   if (assignee = x) { /* sketchy */ }
             ^^^^^^^^

References:
   simple_sketchies.js:66:16
   66| function z(x: ?string) {
                      ^^^^^^ [1]
   simple_sketchies.js:66:15
   66| function z(x: ?string) {
                     ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- simple_sketchies.js:73:16

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:73:16
   73| var valToUse = value || defaultVal; /* sketchy */
                      ^^^^^

References:
   simple_sketchies.js:71:13
   71| var value: ?number = 0;
                   ^^^^^^ [1]
   simple_sketchies.js:71:12
   71| var value: ?number = 0;
                  ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- simple_sketchies.js:78:20

Avoid using `&&` to check the value of number [1]. Consider handling falsy values (0 and NaN) by using a conditional to
choose an explicit default instead. [sketchy-number-and]

   simple_sketchies.js:78:20
   78| var sketchyFalse = value && false; /* sketchy */
                          ^^^^^

References:
   simple_sketchies.js:71:13
   71| var value: ?number = 0;
                   ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------- simple_sketchies.js:78:20

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:78:20
   78| var sketchyFalse = value && false; /* sketchy */
                          ^^^^^

References:
   simple_sketchies.js:71:13
   71| var value: ?number = 0;
                   ^^^^^^ [1]
   simple_sketchies.js:71:12
   71| var value: ?number = 0;
                  ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- simple_sketchies.js:79:19

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:79:19
   79| var sketchyTrue = value || true; /* sketchy */
                         ^^^^^

References:
   simple_sketchies.js:71:13
   71| var value: ?number = 0;
                   ^^^^^^ [1]
   simple_sketchies.js:71:12
   71| var value: ?number = 0;
                  ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:83:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:83:5
   83| if (is && is.a) { }
           ^^

References:
   simple_sketchies.js:81:39
   81| declare var ww: {is?: ?({a: number} | number)};
                                             ^^^^^^ [1]
   simple_sketchies.js:81:23
   81| declare var ww: {is?: ?({a: number} | number)};
                             ^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- simple_sketchies.js:83:11

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:83:11
   83| if (is && is.a) { }
                 ^^^^ [2]

References:
   simple_sketchies.js:81:29
   81| declare var ww: {is?: ?({a: number} | number)};
                                   ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------- simple_sketchies.js:83:11

Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [1]?
[sketchy-null-mixed]

   83| if (is && is.a) { }
                 ^^^^ [1]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:86:5

Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [1]?
[sketchy-null-mixed]

   simple_sketchies.js:86:5
   86| if (hh.a && hh.a.b) { }
           ^^^^

References:
   simple_sketchies.js:85:21
   85| declare var hh: {a: mixed};
                           ^^^^^ [1]


Error ---------------------------------------------------------------------------------------- simple_sketchies.js:86:13

Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [1]?
[sketchy-null-mixed]

   simple_sketchies.js:86:13
   86| if (hh.a && hh.a.b) { }
                   ^^^^^^

References:
   simple_sketchies.js:85:21
   85| declare var hh: {a: mixed};
                           ^^^^^ [1]



Found 20 errors
